--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,11 @@ command = "yarn build"
 publish = ".next"
 
 [[redirects]]
+from = "/_next/static/*"
+to = "/static/:splat"
+status = 200
+
+[[redirects]]
 from = "/*"
 to = "/.netlify/functions/test-handler"
 status = 200
